samples/_failures_safe/1761360827_b95702_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ac0d6601.c: In function ‘main’:
./samples/SAFE/__tmp_ac0d6601.c:152:20: error: missing terminating " character
  152 |             printf("Invalid log entry format. Please try again.\
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ac0d6601.c:152:13: error: expected expression at end of input
  152 |             printf("Invalid log entry format. Please try again.\
      |             ^~~~~~
./samples/SAFE/__tmp_ac0d6601.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ac0d6601.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ac0d6601.c:152:13: error: expected declaration or statement at end of input
